# csc299-project

./: .gitignore
data/: tasks.json
tasks1/: README.md  cli.py  list_tasks.py  search_tasks.py  store.py
tasks2/: README.md  cli.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py  cli.py  model.py  store.py
tasks3/tests/: test_inc.py
