[project]
name = "tasks3"
version = "0.1.0"
description = "CSC299 tasks3: pytest + CLI entry point"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# This lets you run `uv run tasks3`
[project.scripts]
tasks3 = "tasks3:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]

# Tell build tools we're using the `src/` layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]